--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-static-gzip": "^2.0.6",
-    "svelte": "^3.23.2"
+    "svelte": "^3.23.2",
+    "google-auth-library": "^6.0.2",
+    "googleapis": "^52.1.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
