--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "author": "info@3e8.ch",
   "license": "ISC",
   "dependencies": {
-    "basic-ftp": "^4.6.1",
+    "basic-ftp": "^4.6.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-static-gzip": "^2.0.6",
-    "svelte": "^3.23.2",
+    "express-static-gzip": "^2.0.8",
     "google-auth-library": "^6.0.2",
-    "googleapis": "^52.1.0"
+    "googleapis": "^52.1.0",
+    "svelte": "^3.25.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
