--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "3e8-logremote": "^1.0.5",
     "basic-ftp": "^4.6.2",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-static-gzip": "^2.1.0",
